# auto-cv

./: .env_example  .gitignore  README.md  pyproject.toml
src/auto_cv/: cache.py  crews.py  cv_adaptor_crew.py  cv_adaptor_main.py  cv_compile_main.py  cv_compiler_crew.py  cv_compiler_main.py  cv_polisher_crew.py  data_models.py  hola.py  main.py  utils.py
src/auto_cv/agents/: job_post_scrapper.py  web_scraper.py
src/auto_cv/config/: CVCompilationCrewAI.yaml  JobDescriptionCrewAI.yaml  cv_adaptation_agents.yaml  cv_adaptation_tasks.yaml  cv_compilation_agents.yaml  cv_compilation_tasks.yaml  cv_polishing_agents.yaml  cv_polishing_tasks.yaml
src/auto_cv/tools/: date_time.py  job_scrapper.py  latex_compiler.py  web_scraper.py
src/auto_cv/ui/: cv_adaptor_page.py  job_extractor_page.py  main_app.py  main_shiny_app.py  pipeline_page.py  raw_tex_cv_page.py  shared.py
src/auto_cv/ui/www/cv_templates/: 2025_FranciscoPerezSorrosal_CV_English.tex  2025_FranciscoPerezSorrosal_CV_English_short.tex
